<resources>
    <string name="app_name">MyLab1</string>
    <string name="title_name">中山大学学生信息系统</string>
    <string name="image_name">可爱的图标</string>
    <string name="xuehao_hint">请输入学号</string>
    <string name="password_hint">请输入密码</string>
    <string name="xuehao">学号:</string>
    <string name="password">密码:</string>
    <string name="student">学生</string>
    <string name="teacher">教职工</string>
    <string name="sign_in">登录</string>
    <string name="register">注册</string>
</resources>
