<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView android:id="@+id/title_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_name"
        android:textColor="@color/black"/>

    <ImageView android:id="@+id/my_image"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:contentDescription="@string/image_name"
        android:src="@mipmap/sysu"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_message"
        />

    <EditText android:id="@+id/xuehao_input"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/xuehao_hint"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_image"
        android:inputType="number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xuehao"
        android:layout_marginEnd="20dp"
        app:layout_constraintBaseline_toBaselineOf="@id/xuehao_input"
        app:layout_constraintRight_toLeftOf="@id/xuehao_input"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <EditText android:id="@+id/password_input"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/password_hint"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/xuehao_input"
        android:inputType="textPassword"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginEnd="20dp"
        app:layout_constraintBaseline_toBaselineOf="@id/password_input"
        app:layout_constraintRight_toLeftOf="@id/password_input"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <RadioGroup android:id="@+id/id0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_input">
        <RadioButton android:id="@+id/id1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:textSize="18sp"
            android:checked="true"/>
        <RadioButton android:id="@+id/id2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            android:textSize="18sp"
            android:layout_marginStart="10dp"/>

    </RadioGroup>

    <Button android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/id0"
        android:background="@drawable/button_background"
        android:text="@string/sign_in"
        android:textSize="18sp"
        android:textColor="@color/white"/>

    <Button android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/id0"
        android:background="@drawable/button_background"
        android:text="@string/register"
        android:textSize="18sp"
        android:textColor="@color/white"/>



</android.support.constraint.ConstraintLayout>
